<resources>
    <string name="app_name">CampusEats</string>
    <string name="title_activity_main_navigation_screen">MainNavigationScreen</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Devin Milligan</string>
    <string name="nav_header_subtitle">milldev@iastate.edu</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_edit">Edit Menu</string>

    <string name="menu_home">Home</string>
    <string name="menu_map">Map</string>
    <string name="menu_log_out">Log Out</string>
    <string name="menu_switch_user">Switch User</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_profile_store">Store Settings</string>
    <string name="menu_admin_accounts">Admin Accounts</string>
    <string name="menu_store_menu">Menu</string>

    <string name="login_welcome">Welcome to CampusEats!</string>
    <string name="no_email">Please enter an email</string>
    <string name="no_password">Please enter a password</string>
    <string name="forgot_password">You forgot your password</string>
    <string name="delivery_account">Delivery Account:</string>
    <string name="title_activity_test_store">TestStoreActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

</resources>
