<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home_store"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_menu_store"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_store_menu" />

    </group>

    <item android:title="Profile">
        <menu>
            <item
                android:id="@+id/nav_profile_store"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_profile" />
            <item
                android:id="@+id/nav_log_out_store"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="@string/menu_log_out" />
        </menu>
    </item>

</menu>
