<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation_admin"
    app:startDestination="@+id/nav_home_admin">

    <fragment
        android:id="@+id/nav_home_admin"
        android:name="com.example.project309.app.uiAdmin.home.HomeFragmentAdmin"
        android:label="@string/menu_home" />

    <fragment
        android:id="@+id/nav_accounts_admin"
        android:name="com.example.project309.app.uiAdmin.AccountsAdmin.AccountsFragmentAdmin"
        android:label="@string/menu_admin_accounts" />

    <fragment
        android:id="@+id/nav_log_out_admin"
        android:name="com.example.project309.app.uiAdmin.logout.LogOutFragmentAdmin"
        android:label="@string/menu_log_out" />

    <fragment
        android:id="@+id/nav_profile_admin"
        android:name="com.example.project309.app.uiAdmin.profile.ProfileFragmentAdmin"
        android:label="@string/menu_profile" />


</navigation>