<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation_delivery"
    app:startDestination="@+id/nav_home_delivery">

    <fragment
        android:id="@+id/nav_home_delivery"
        android:name="com.example.project309.app.uiDelivery.home.HomeFragmentDelivery"
        android:label="@string/menu_home" />

    <activity
        android:id="@+id/nav_map_delivery"
        android:name="com.example.project309.app.uiDelivery.map.MapsActivityDelivery"
        android:label="@string/menu_map" />

    <fragment
        android:id="@+id/nav_log_out_delivery"
        android:name="com.example.project309.app.uiDelivery.logout.LogOutFragmentDelivery"
        android:label="@string/menu_log_out" />

    <fragment
        android:id="@+id/nav_switch_home_delivery"
        android:name="com.example.project309.app.uiDelivery.switchuser.SwitchHomeFragment"
        android:label="@string/menu_switch_user" />


</navigation>