<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home_delivery"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_map_delivery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_map" />

    </group>

    <item android:title="Profile">
        <menu>
            <item
                android:id="@+id/nav_switch_home_delivery"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/menu_switch_user" />

        </menu>
    </item>

</menu>
